RESOLVED FIXED85510
Web Inspector: [Device Metrics] With "Fit window" option on, page contents are downscaled incorrectly
https://bugs.webkit.org/show_bug.cgi?id=85510
Summary Web Inspector: [Device Metrics] With "Fit window" option on, page contents ar...
Alexander Pavlov (apavlov)
Reported 2012-05-03 10:02:41 PDT
If the "Fit window" option is on, and the target FrameView size is smaller than the emulated device screen, the page contents can be downscaled too much, occupying half of the FrameView width (or even less). This used to work fine originally, but seemingly got regressed with recent style resolution or reflow-related changes.
Attachments
Patch (6.76 KB, patch)
2012-05-04 08:21 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2012-05-04 08:21:34 PDT
Alexander Pavlov (apavlov)
Comment 2 2012-05-04 10:04:55 PDT
Note You need to log in before you can comment on or make changes to this bug.