Web Inspector: [Device Metrics] With "Fit window" option on, page contents are downscaled incorrectly https://bugs.webkit.org/show_bug.cgi?id=85510

Reviewed by Pavel Feldman.

Source/WebKit/chromium:

Use the RenderView width rather than FrameView contents width whenever possible.
Drive-by: add protection from division-by-zero (for some weird rendering states).

Test: inspector/styles/device-metrics-fit-window.html

* src/WebDevToolsAgentImpl.cpp:
(WebKit::DeviceMetricsSupport::ensureOriginalZoomFactor):
(WebKit::DeviceMetricsSupport::scaledEmulatedFrameSize):

LayoutTests:

* inspector/styles/device-metrics-fit-window-expected.txt: Added.
* inspector/styles/device-metrics-fit-window.html: Added.

Canonical link: https://commits.webkit.org/103189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116116 268f45cc-cd09-0410-ab3c-d52691b4dbfc