Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp
@@ -47,6 +47,7 @@
 #include "PageScriptDebugServer.h"
 #include "painting/GraphicsContextBuilder.h"
 #include "PlatformString.h"
+#include "RenderView.h"
 #include "ResourceError.h"
 #include "ResourceRequest.h"
 #include "ResourceResponse.h"
@@ -269,7 +270,11 @@ private:
         m_webView->setPageScaleFactor(1, WebPoint());
         m_webView->setZoomLevel(false, 0);
         WebSize scaledEmulatedSize = scaledEmulatedFrameSize(frameView);
-        m_originalZoomFactor = static_cast<double>(scaledEmulatedSize.width) / frameView->contentsWidth();
+        Document* document = frameView->frame()->document();
+        double denominator = document->renderView() ? document->renderView()->viewWidth() : frameView->contentsWidth();
+        if (!denominator)
+            denominator = 1;
+        m_originalZoomFactor = static_cast<double>(scaledEmulatedSize.width) / denominator;
     }
 
     void restore()
@@ -298,8 +303,8 @@ private:
         int overrideHeight = m_emulatedFrameSize.height;
 
         WebSize webViewSize = m_webView->size();
-        int availableViewWidth = webViewSize.width - scrollbarDimensions.width;
-        int availableViewHeight = webViewSize.height - scrollbarDimensions.height;
+        int availableViewWidth = max(webViewSize.width - scrollbarDimensions.width, 1);
+        int availableViewHeight = max(webViewSize.height - scrollbarDimensions.height, 1);
 
         double widthRatio = static_cast<double>(overrideWidth) / availableViewWidth;
         double heightRatio = static_cast<double>(overrideHeight) / availableViewHeight;
